configuration to connect to zeo on {{env.var}}/zeo/zdsock as well.
See
http://www.coactivate.org/projects/opencore/lists/opencore-dev/archive/2010/07/1278617074321/forum_view

The RunZopeScriptsWithZeo task now looks for a
config.skip_zopectl_scripts setting.  If it is set to a True value,
the task does nothing.  This can be used to prevent the build from
hanging on this task if another ZEO instance is already running and
the user knows that the zopectl initialization scripts don't need to
be run, i.e. when building a code upgrade in parallel to a running
site.

The fassembler:maildrop and fassembler:zeo projects now include this
skip_zopectl_scripts setting, with default 0.

0.5
===

Add ``num_extra_zopes`` property to the environ object, which looks
for a ``num_extra_zopes`` setting in the [general] section of
build.ini and returns it as an integer or 0 if no such setting exists.

This setting will then be used to fill in the value of
``opencore_remote_uri`` in the Frontend configuration, allowing the
frontend to proxy to a load-balanced set of Zope instances.

A ``num_extra_zopes`` setting has also been added to the fassembler:topp project, where it is saved to build.ini.

0.4
===

This is the first tag made for fassembler.  A lot happened before now but releases were never cut.

In this release:

* Added fassembler:extrazope project, which will build an additional Zope instance connected to the same ZEO server.

* In fassembler:opencore, made the ``debug`` setting actually work, to control whether zope starts in debug mode when running ``./opencore/bin/zopectl fg`` (where it previously always ran with ``debug-mode=on``) or ``./bin/start-opencore`` (where it previously always ran with ``debug-mode=off`)

* Added a setting ``never_create_virtualenv`` for fassembler.tasks.VirtualEnv, which, if set, makes that task act as an assertion of the given virtualenv's existence, so that a build can fail if the virtualenv hasn't already been created.